# project-creator

./: .gitignore  ProjectCreator.py  index.html  package-lock.json  package.json  tailwind.config.ts  test-dnd.ts  test-drag.ts  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.superpowers/brainstorm/16972-1774407686/: .server-stopped  design-architecture.html  design-ui-v2.html  design-ui-v3.html  design-ui-v4.html  design-ui-v5.html  design-ui-v6.html  design-ui.html  layout.html
docs/superpowers/plans/: 2026-03-25-per-template-save-state.md  2026-03-25-projectcreator.md  2026-03-25-tauri-rewrite.md  2026-03-25-virtual-root-folder.md  2026-04-04-marquee-preview-highlight.md
docs/superpowers/specs/: 2026-03-25-per-template-save-state-design.md  (+4 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppLayout.tsx  DeleteTemplateDialog.tsx  DescriptionPanel.tsx  FolderTree.tsx  FolderTreeDragOverlay.tsx  FolderTreeRow.tsx  GenerateDialog.tsx  NewTemplateDialog.tsx  TemplateEditor.tsx  TemplateList.tsx  ThemeToggle.tsx  UnsavedChangesDialog.tsx
src/lib/: generate.ts  models.ts  store.ts  tree-operations.ts  validation.ts
tests/: DescriptionPanel.test.tsx  FolderTree.test.tsx  FolderTreeRow.test.tsx  TemplateEditor.test.tsx  TemplateList.test.tsx  UnsavedChangesDialog.test.tsx  debug-clipboard.test.tsx  generate.test.ts  models.test.ts  setup.ts  store.test.ts  test_logic.py  tree-operations.test.ts  validation.test.ts
(+4 files in other folders)
