[package]
name = "project-creator"
version = "0.0.0"
description = "ProjectCreator"
authors = []
license = ""
repository = ""
default-run = "project-creator"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "project_creator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "project-creator"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
